crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__range_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Ok(
    (
        ",1",
        DateRule {
            kinds: [
                DateKind {
                    range: (
                        Date(
                            1,
                        ),
                        Date(
                            3,
                        ),
                    ),
                    periodic: DatePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
